# UGEO

./: .gitattributes  README.md
DataSet/case/: 123456.GRDECL  facies-1.GRDECL
src/: CMakeLists.txt
src/UGEO/: BaseFunction.cpp  BaseFunction.h  Constants.h  EnumDef.h  GridPlot.cpp  GridProcess.cpp  GridProcess.h  Gridplot.h  Gridstruct.h  IJKGrid.cpp  IJKGrid.h  ProjectFile.cpp  ProjectFile.h  PropertySet.cpp  PropertySet.h  SerachDialog.cpp  SerachDialog.h  Struct.h  Tree.cpp  Tree.h  UNCONG_automoc.cpp  cellpara3dshow.cpp  cellpara3dshow.h  cellpara3dshow.ui  commands.cpp  commands.h  fileReader.cpp  fileReader.h  main.cpp  mywidget.cpp  mywidget.h
src/UGEO/Icons/: Grid3DToolIcon.qrc
wiki/: souce_code.md
